--- a/ProtoNets-Omniglot.ipynb
+++ b/ProtoNets-Omniglot.ipynb
@@ -867,7 +867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inference\n",
+    "## Prediction on unlabelled Query Images\n",
     "Making predictions on unlabelled query images given a new support set."
    ]
   },
@@ -1081,13 +1081,6 @@
     "# Display Support images\n",
     "display_sample(support.cpu())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
